// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/venues/getVenuesCategoriesAsync should get state after action: getVenuesCategoriesAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_CATEGORIES_CANCEL"} 1`] = `
Object {
  "getVenuesCategoriesAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesCategoriesAsync should get state after action: getVenuesCategoriesAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_CATEGORIES_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesCategoriesAsync should get state after action: getVenuesCategoriesAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_CATEGORIES_FAILURE"} 1`] = `
Object {
  "getVenuesCategoriesAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesCategoriesAsync should get state after action: getVenuesCategoriesAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_CATEGORIES_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesCategoriesAsync should get state after action: getVenuesCategoriesAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_CATEGORIES_SUCCESS"} 1`] = `
Object {
  "getVenuesCategoriesAsync": Object {
    "entityIds": Array [
      "4d4b7104d754a06370d81259",
      "4d4b7105d754a06372d81259",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesCategoriesAsync should get state after action: getVenuesCategoriesAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_CATEGORIES_SUCCESS"} 2`] = `
Object {
  "categories": Object {
    "4d4b7104d754a06370d81259": Object {
      "categories": Array [
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "56aa371be4b08b9a8d5734db",
          "name": "Amphitheater",
          "pluralName": "Amphitheaters",
          "shortName": "Amphitheater",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/aquarium_",
            "suffix": ".png",
          },
          "id": "4fceea171983d5d06c3e9823",
          "name": "Aquarium",
          "pluralName": "Aquariums",
          "shortName": "Aquarium",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/arcade_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1e1931735",
          "name": "Arcade",
          "pluralName": "Arcades",
          "shortName": "Arcade",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/artgallery_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1e2931735",
          "name": "Art Gallery",
          "pluralName": "Art Galleries",
          "shortName": "Art Gallery",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/bowling_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1e4931735",
          "name": "Bowling Alley",
          "pluralName": "Bowling Alleys",
          "shortName": "Bowling Alley",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/casino_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d17c941735",
          "name": "Casino",
          "pluralName": "Casinos",
          "shortName": "Casino",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79e7",
          "name": "Circus",
          "pluralName": "Circuses",
          "shortName": "Circus",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/comedyclub_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d18e941735",
          "name": "Comedy Club",
          "pluralName": "Comedy Clubs",
          "shortName": "Comedy Club",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_",
            "suffix": ".png",
          },
          "id": "5032792091d4c4b30a586d5c",
          "name": "Concert Hall",
          "pluralName": "Concert Halls",
          "shortName": "Concert Hall",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79ef",
          "name": "Country Dance Club",
          "pluralName": "Country Dance Clubs",
          "shortName": "Country Dance Club",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79e8",
          "name": "Disc Golf",
          "pluralName": "Disc Golf Courses",
          "shortName": "Disc Golf",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "56aa371be4b08b9a8d573532",
          "name": "Exhibit",
          "pluralName": "Exhibits",
          "shortName": "Exhibit",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f1931735",
          "name": "General Entertainment",
          "pluralName": "General Entertainment",
          "shortName": "Entertainment",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/racetrack_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79ea",
          "name": "Go Kart Track",
          "pluralName": "Go Kart Tracks",
          "shortName": "Go Kart",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/historicsite_",
            "suffix": ".png",
          },
          "id": "4deefb944765f83613cdba6e",
          "name": "Historic Site",
          "pluralName": "Historic Sites",
          "shortName": "Historic Site",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/karaoke_",
            "suffix": ".png",
          },
          "id": "5744ccdfe4b0c0459246b4bb",
          "name": "Karaoke Box",
          "pluralName": "Karaoke Boxes",
          "shortName": "Karaoke",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79e6",
          "name": "Laser Tag",
          "pluralName": "Laser Tag Places",
          "shortName": "Laser Tag",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/historicsite_",
            "suffix": ".png",
          },
          "id": "5642206c498e4bfca532186c",
          "name": "Memorial Site",
          "pluralName": "Memorial Sites",
          "shortName": "Memorial Site",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/parks_outdoors/golfcourse_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79eb",
          "name": "Mini Golf",
          "pluralName": "Mini Golf Courses",
          "shortName": "Mini Golf",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
                "suffix": ".png",
              },
              "id": "56aa371be4b08b9a8d5734de",
              "name": "Drive-in Theater",
              "pluralName": "Drive-in Theaters",
              "shortName": "Drive-in Theater",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d17e941735",
              "name": "Indie Movie Theater",
              "pluralName": "Indie Movie Theaters",
              "shortName": "Indie Movies",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d180941735",
              "name": "Multiplex",
              "pluralName": "Multiplexes",
              "shortName": "Cineplex",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/movietheater_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d17f941735",
          "name": "Movie Theater",
          "pluralName": "Movie Theaters",
          "shortName": "Movie Theater",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_art_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d18f941735",
              "name": "Art Museum",
              "pluralName": "Art Museums",
              "shortName": "Art Museum",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/stripclub_",
                "suffix": ".png",
              },
              "id": "559acbe0498e472f1a53fa23",
              "name": "Erotic Museum",
              "pluralName": "Erotic Museums",
              "shortName": "Erotic Museum",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_history_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d190941735",
              "name": "History Museum",
              "pluralName": "History Museums",
              "shortName": "History Museum",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_planetarium_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d192941735",
              "name": "Planetarium",
              "pluralName": "Planetariums",
              "shortName": "Planetarium",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_science_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d191941735",
              "name": "Science Museum",
              "pluralName": "Science Museums",
              "shortName": "Science Museum",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/museum_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d181941735",
          "name": "Museum",
          "pluralName": "Museums",
          "shortName": "Museum",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_jazzclub_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1e7931735",
              "name": "Jazz Club",
              "pluralName": "Jazz Clubs",
              "shortName": "Jazz Club",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_pianobar_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1e8931735",
              "name": "Piano Bar",
              "pluralName": "Piano Bars",
              "shortName": "Piano Bar",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_rockclub_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1e9931735",
              "name": "Rock Club",
              "pluralName": "Rock Clubs",
              "shortName": "Rock Club",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1e5931735",
          "name": "Music Venue",
          "pluralName": "Music Venues",
          "shortName": "Music Venue",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "5744ccdfe4b0c0459246b4b8",
          "name": "Pachinko Parlor",
          "pluralName": "Pachinko Parlors",
          "shortName": "Pachinko Parlor",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d134941735",
              "name": "Dance Studio",
              "pluralName": "Dance Studios",
              "shortName": "Dance Studio",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_theater_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d135941735",
              "name": "Indie Theater",
              "pluralName": "Indie Theaters",
              "shortName": "Indie",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_operahouse_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d136941735",
              "name": "Opera House",
              "pluralName": "Opera Houses",
              "shortName": "Opera House",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_theater_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d137941735",
              "name": "Theater",
              "pluralName": "Theaters",
              "shortName": "Theater",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f2931735",
          "name": "Performing Arts Venue",
          "pluralName": "Performing Arts Venues",
          "shortName": "Performing Arts",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/billiards_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1e3931735",
          "name": "Pool Hall",
          "pluralName": "Pool Halls",
          "shortName": "Billiards",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/parks_outdoors/sculpture_",
                "suffix": ".png",
              },
              "id": "52e81612bcbc57f1066b79ed",
              "name": "Outdoor Sculpture",
              "pluralName": "Outdoor Sculptures",
              "shortName": "Outdoor Sculpture",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
                "suffix": ".png",
              },
              "id": "52e81612bcbc57f1066b79ee",
              "name": "Street Art",
              "pluralName": "Street Art Installations",
              "shortName": "Street Art",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "507c8c4091d498d9fc8c67a9",
          "name": "Public Art",
          "pluralName": "Public Art",
          "shortName": "Public Art",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_track_",
            "suffix": ".png",
          },
          "id": "56aa371be4b08b9a8d573514",
          "name": "Racecourse",
          "pluralName": "Racecourses",
          "shortName": "Racecourse",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/racetrack_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f4931735",
          "name": "Racetrack",
          "pluralName": "Racetracks",
          "shortName": "Racetrack",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79e9",
          "name": "Roller Rink",
          "pluralName": "Roller Rinks",
          "shortName": "Roller Rink",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
            "suffix": ".png",
          },
          "id": "52e81612bcbc57f1066b79ec",
          "name": "Salsa Club",
          "pluralName": "Salsa Clubs",
          "shortName": "Salsa Club",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_dancestudio_",
            "suffix": ".png",
          },
          "id": "56aa371be4b08b9a8d5734f9",
          "name": "Samba School",
          "pluralName": "Samba Schools",
          "shortName": "Samba School",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_baseball_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d18c941735",
              "name": "Baseball Stadium",
              "pluralName": "Baseball Stadiums",
              "shortName": "Baseball",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_basketball_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d18b941735",
              "name": "Basketball Stadium",
              "pluralName": "Basketball Stadiums",
              "shortName": "Basketball",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_cricket_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d18a941735",
              "name": "Cricket Ground",
              "pluralName": "Cricket Grounds",
              "shortName": "Cricket",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_football_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d189941735",
              "name": "Football Stadium",
              "pluralName": "Football Stadiums",
              "shortName": "Football",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_hockey_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d185941735",
              "name": "Hockey Arena",
              "pluralName": "Hockey Arenas",
              "shortName": "Hockey",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_football_",
                "suffix": ".png",
              },
              "id": "56aa371be4b08b9a8d573556",
              "name": "Rugby Stadium",
              "pluralName": "Rugby Stadiums",
              "shortName": "Rugby",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_soccer_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d188941735",
              "name": "Soccer Stadium",
              "pluralName": "Soccer Stadiums",
              "shortName": "Soccer",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_tennis_",
                "suffix": ".png",
              },
              "id": "4e39a891bd410d7aed40cbc2",
              "name": "Tennis Stadium",
              "pluralName": "Tennis Stadiums",
              "shortName": "Tennis",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_track_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d187941735",
              "name": "Track Stadium",
              "pluralName": "Track Stadiums",
              "shortName": "Track",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d184941735",
          "name": "Stadium",
          "pluralName": "Stadiums",
          "shortName": "Stadium",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/themepark_",
                "suffix": ".png",
              },
              "id": "5109983191d435c0d71c2bb1",
              "name": "Theme Park Ride / Attraction",
              "pluralName": "Theme Park Rides/Attractions",
              "shortName": "Theme Park",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/themepark_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d182941735",
          "name": "Theme Park",
          "pluralName": "Theme Parks",
          "shortName": "Theme Park",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
            "suffix": ".png",
          },
          "id": "56aa371be4b08b9a8d573520",
          "name": "Tour Provider",
          "pluralName": "Tour Providers",
          "shortName": "Tour Provider",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/waterpark_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d193941735",
          "name": "Water Park",
          "pluralName": "Water Parks",
          "shortName": "Water Park",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/zoo_",
                "suffix": ".png",
              },
              "id": "58daa1558bbb0b01f18ec1fd",
              "name": "Zoo Exhibit",
              "pluralName": "Zoo Exhibits",
              "shortName": "Zoo Exhibit",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/zoo_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d17b941735",
          "name": "Zoo",
          "pluralName": "Zoos",
          "shortName": "Zoo",
        },
      ],
      "icon": Object {
        "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
        "suffix": ".png",
      },
      "id": "4d4b7104d754a06370d81259",
      "name": "Arts & Entertainment",
      "pluralName": "Arts & Entertainment",
      "shortName": "Arts & Entertainment",
    },
    "4d4b7105d754a06372d81259": Object {
      "categories": Array [
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/default_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d199941735",
              "name": "College Arts Building",
              "pluralName": "College Arts Buildings",
              "shortName": "Arts",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_communications_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d19a941735",
              "name": "College Communications Building",
              "pluralName": "College Communications Buildings",
              "shortName": "Communications",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_engineering_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d19e941735",
              "name": "College Engineering Building",
              "pluralName": "College Engineering Buildings",
              "shortName": "Engineering",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_history_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d19d941735",
              "name": "College History Building",
              "pluralName": "College History Buildings",
              "shortName": "History",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_math_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d19c941735",
              "name": "College Math Building",
              "pluralName": "College Math Buildings",
              "shortName": "Math",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_science_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d19b941735",
              "name": "College Science Building",
              "pluralName": "College Science Buildings",
              "shortName": "Science",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/education/collegeacademicbuildings_technology_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d19f941735",
              "name": "College Technology Building",
              "pluralName": "College Technology Buildings",
              "shortName": "Technology",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/academicbuilding_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d198941735",
          "name": "College Academic Building",
          "pluralName": "College Academic Buildings",
          "shortName": "Academic Building",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/administrativebuilding_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d197941735",
          "name": "College Administrative Building",
          "pluralName": "College Administrative Buildings",
          "shortName": "Administrative Building",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/building/auditorium_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1af941735",
          "name": "College Auditorium",
          "pluralName": "College Auditoriums",
          "shortName": "Auditorium",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/bookstore_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1b1941735",
          "name": "College Bookstore",
          "pluralName": "College Bookstores",
          "shortName": "College Bookstore",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/cafeteria_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a1941735",
          "name": "College Cafeteria",
          "pluralName": "College Cafeterias",
          "shortName": "Cafeteria",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/classroom_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a0941735",
          "name": "College Classroom",
          "pluralName": "College Classrooms",
          "shortName": "Classroom",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/building/gym_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1b2941735",
          "name": "College Gym",
          "pluralName": "College Gyms",
          "shortName": "Gym",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/lab_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a5941735",
          "name": "College Lab",
          "pluralName": "College Labs",
          "shortName": "Lab",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/building/library_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a7941735",
          "name": "College Library",
          "pluralName": "College Libraries",
          "shortName": "Library",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/quad_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1aa941735",
          "name": "College Quad",
          "pluralName": "College Quads",
          "shortName": "Quad",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/reccenter_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a9941735",
          "name": "College Rec Center",
          "pluralName": "College Rec Centers",
          "shortName": "Rec Center",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/residencehall_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a3941735",
          "name": "College Residence Hall",
          "pluralName": "College Residence Halls",
          "shortName": "Residence Hall",
        },
        Object {
          "categories": Array [
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_baseball_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1bb941735",
              "name": "College Baseball Diamond",
              "pluralName": "College Baseball Diamonds",
              "shortName": "Baseball",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_basketball_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1ba941735",
              "name": "College Basketball Court",
              "pluralName": "College Basketball Courts",
              "shortName": "Basketball",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_cricket_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1b9941735",
              "name": "College Cricket Pitch",
              "pluralName": "College Cricket Pitches",
              "shortName": "Cricket",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_football_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1b8941735",
              "name": "College Football Field",
              "pluralName": "College Football Fields",
              "shortName": "Football",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_hockey_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1b5941735",
              "name": "College Hockey Rink",
              "pluralName": "College Hockey Rinks",
              "shortName": "Hockey",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_soccer_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1b7941735",
              "name": "College Soccer Field",
              "pluralName": "College Soccer Fields",
              "shortName": "Soccer",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_tennis_",
                "suffix": ".png",
              },
              "id": "4e39a9cebd410d7aed40cbc4",
              "name": "College Tennis Court",
              "pluralName": "College Tennis Courts",
              "shortName": "Tennis Court",
            },
            Object {
              "categories": Array [],
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_track_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1b6941735",
              "name": "College Track",
              "pluralName": "College Tracks",
              "shortName": "Track",
            },
          ],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/stadium_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1b4941735",
          "name": "College Stadium",
          "pluralName": "College Stadiums",
          "shortName": "Stadium",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/performingarts_theater_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ac941735",
          "name": "College Theater",
          "pluralName": "College Theaters",
          "shortName": "Theater",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/communitycollege_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a2941735",
          "name": "Community College",
          "pluralName": "Community Colleges",
          "shortName": "Community College",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/frathouse_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1b0941735",
          "name": "Fraternity House",
          "pluralName": "Fraternity Houses",
          "shortName": "Frat House",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/other_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a8941735",
          "name": "General College & University",
          "pluralName": "General Colleges & Universities",
          "shortName": "Education",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/lawschool_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1a6941735",
          "name": "Law School",
          "pluralName": "Law Schools",
          "shortName": "Law School",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/building/medical_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1b3941735",
          "name": "Medical School",
          "pluralName": "Medical Schools",
          "shortName": "Medical School",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/frathouse_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d141941735",
          "name": "Sorority House",
          "pluralName": "Sorority Houses",
          "shortName": "Sorority House",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/studentcenter_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ab941735",
          "name": "Student Center",
          "pluralName": "Student Centers",
          "shortName": "Student Center",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/tradeschool_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ad941735",
          "name": "Trade School",
          "pluralName": "Trade Schools",
          "shortName": "Trade School",
        },
        Object {
          "categories": Array [],
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/education/default_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ae941735",
          "name": "University",
          "pluralName": "Universities",
          "shortName": "University",
        },
      ],
      "icon": Object {
        "prefix": "https://ss3.4sqi.net/img/categories_v2/education/default_",
        "suffix": ".png",
      },
      "id": "4d4b7105d754a06372d81259",
      "name": "College & University",
      "pluralName": "Colleges & Universities",
      "shortName": "College & Education",
    },
  },
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesListedAsync should get state after action: getVenuesListedAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_LISTED_CANCEL"} 1`] = `
Object {
  "getVenuesListedAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesListedAsync should get state after action: getVenuesListedAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_LISTED_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesListedAsync should get state after action: getVenuesListedAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_LISTED_FAILURE"} 1`] = `
Object {
  "getVenuesListedAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesListedAsync should get state after action: getVenuesListedAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_LISTED_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesListedAsync should get state after action: getVenuesListedAsync.success with action: {"meta": undefined, "payload": [Object], "type": "GET_VENUES_LISTED_SUCCESS"} 1`] = `
Object {
  "getVenuesListedAsync": Object {
    "entityIds": Array [
      "others-Lists from other people",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesListedAsync should get state after action: getVenuesListedAsync.success with action: {"meta": undefined, "payload": [Object], "type": "GET_VENUES_LISTED_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {
    "others-Lists from other people": Object {
      "count": 1277,
      "items": Array [
        Object {
          "canonicalUrl": "https://foursquare.com/thesparkgroup/list/nyc-bars-w-free-wifi",
          "collaborative": false,
          "createdAt": 1341267590,
          "description": "",
          "editable": false,
          "followers": Object {
            "count": 108,
          },
          "id": "4ff21e86e4b0ac2746c17ac1",
          "listItems": Object {
            "count": 147,
            "items": Array [
              Object {
                "createdAt": 1341320340,
                "id": "v4cbcafab035d236aebebe64e",
              },
            ],
          },
          "name": "NYC Bars w/ Free Wi-Fi",
          "photo": Object {
            "createdAt": 1316910845,
            "height": 720,
            "id": "4e7e76fd46906788c6b9da00",
            "prefix": "https://igx.4sqi.net/img/general/",
            "suffix": "/XZYJNQSANIQTTIDP4ZFTEUDXF50Q5234VCKEEMXII1JSV0XS.jpg",
            "user": Object {
              "firstName": "John",
              "gender": "male",
              "id": "123456",
              "lastName": "Doe",
              "photo": Object {
                "prefix": "https://igx.4sqi.net/img/user/",
                "suffix": "/123456.jpg",
              },
            },
            "visibility": "public",
            "width": 537,
          },
          "public": true,
          "type": "others",
          "updatedAt": 1474559629,
          "url": "/thesparkgroup/list/nyc-bars-w-free-wifi",
          "user": Object {
            "firstName": "The Spark Group",
            "gender": "none",
            "id": "2027973",
            "photo": Object {
              "prefix": "https://igx.4sqi.net/img/user/",
              "suffix": "/123456.png",
            },
          },
        },
        Object {
          "canonicalUrl": "https://foursquare.com/timeoutnewyork/list/summer-parties",
          "collaborative": false,
          "createdAt": 1374179715,
          "description": "Put on your dancing shoes and head to these sizzling spots for summer’s hottest parties.",
          "editable": false,
          "followers": Object {
            "count": 304,
          },
          "id": "51e85183498e59b10a3f7bea",
          "listItems": Object {
            "count": 14,
            "items": Array [
              Object {
                "createdAt": 1374180131,
                "id": "t51e8543b498e7d7abd657c24",
                "photo": Object {
                  "createdAt": 1374180441,
                  "height": 370,
                  "id": "51e854598bbdf64c27214c74",
                  "prefix": "https://igx.4sqi.net/img/general/",
                  "suffix": "/742542_Vj4eR1iQui22nyGV4G-xvfruWkRmr7hcOwXMaPbwVho.jpg",
                  "user": Object {
                    "firstName": "Time Out New York",
                    "gender": "none",
                    "id": "742542",
                    "photo": Object {
                      "prefix": "https://igx.4sqi.net/img/user/",
                      "suffix": "/XXHKCBSQHBORZNSR.jpg",
                    },
                    "type": "page",
                  },
                  "visibility": "public",
                  "width": 555,
                },
              },
            ],
          },
          "logView": true,
          "name": "Summer Parties",
          "photo": Object {
            "createdAt": 1374179263,
            "height": 370,
            "id": "51e84fbf8bbdf64c271c797b",
            "prefix": "https://igx.4sqi.net/img/general/",
            "suffix": "/742542_FrC-C6NUK0-7sjuLGQcVvyDcQhAhlfjd8Ghw_FxJigE.jpg",
            "user": Object {
              "firstName": "Time Out New York",
              "gender": "none",
              "id": "742542",
              "photo": Object {
                "prefix": "https://igx.4sqi.net/img/user/",
                "suffix": "/XXHKCBSQHBORZNSR.jpg",
              },
              "type": "page",
            },
            "visibility": "public",
            "width": 555,
          },
          "public": true,
          "type": "others",
          "updatedAt": 1374180690,
          "url": "/timeoutnewyork/list/summer-parties",
          "user": Object {
            "firstName": "Time Out New York",
            "gender": "none",
            "id": "742542",
            "photo": Object {
              "prefix": "https://igx.4sqi.net/img/user/",
              "suffix": "/XXHKCBSQHBORZNSR.jpg",
            },
            "type": "page",
          },
        },
      ],
      "name": "Lists from other people",
      "type": "others",
    },
  },
}
`;

exports[`reducers/venues/getVenuesNextVenuesAsync should get state after action: getVenuesNextVenuesAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_NEXT_VENUES_CANCEL"} 1`] = `
Object {
  "getVenuesNextVenuesAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesNextVenuesAsync should get state after action: getVenuesNextVenuesAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_NEXT_VENUES_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesNextVenuesAsync should get state after action: getVenuesNextVenuesAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_NEXT_VENUES_FAILURE"} 1`] = `
Object {
  "getVenuesNextVenuesAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesNextVenuesAsync should get state after action: getVenuesNextVenuesAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_NEXT_VENUES_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesNextVenuesAsync should get state after action: getVenuesNextVenuesAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_NEXT_VENUES_SUCCESS"} 1`] = `
Object {
  "getVenuesNextVenuesAsync": Object {
    "entityIds": Array [
      "4b410414f964a5206dbf25e3",
      "4b2ef069f964a52085e824e3",
      "474d3e5df964a520a24c1fe3",
      "512997d7e4b0b35362953cb1",
      "5261525c11d2bf8a5e104a61",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesNextVenuesAsync should get state after action: getVenuesNextVenuesAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_NEXT_VENUES_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {
    "474d3e5df964a520a24c1fe3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/beergarden_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d117941735",
          "name": "Beer Garden",
          "pluralName": "Beer Gardens",
          "primary": true,
          "shortName": "Beer Garden",
        },
      ],
      "id": "474d3e5df964a520a24c1fe3",
      "location": Object {
        "address": "113 N 3rd St",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Berry St",
        "formattedAddress": Array [
          "113 N 3rd St (at Berry St)",
          "Brooklyn, NY 11249",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.71657114852416,
            "lng": -73.96142999712337,
          },
        ],
        "lat": 40.71657114852416,
        "lng": -73.96142999712337,
        "postalCode": "11249",
        "state": "NY",
      },
      "name": "Radegast Hall & Biergarten",
      "venuePage": Object {
        "id": "56755543",
      },
    },
    "4b2ef069f964a52085e824e3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d116941735",
          "name": "Bar",
          "pluralName": "Bars",
          "primary": true,
          "shortName": "Bar",
        },
      ],
      "id": "4b2ef069f964a52085e824e3",
      "location": Object {
        "address": "174 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Driggs Ave",
        "formattedAddress": Array [
          "174 Broadway (at Driggs Ave)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.710078899964,
            "lng": -73.96263084075063,
          },
        ],
        "lat": 40.710078899964,
        "lng": -73.96263084075063,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Velvet Brooklyn Lounge",
    },
    "4b410414f964a5206dbf25e3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/apparel_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d103951735",
          "name": "Clothing Store",
          "pluralName": "Clothing Stores",
          "primary": true,
          "shortName": "Apparel",
        },
      ],
      "id": "4b410414f964a5206dbf25e3",
      "location": Object {
        "address": "184 Broadway (at Driggs)",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "btwn Driggs Ave & Roebling St",
        "formattedAddress": Array [
          "184 Broadway (at Driggs) (btwn Driggs Ave & Roebling St)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.709751,
            "lng": -73.962264,
          },
        ],
        "lat": 40.709751,
        "lng": -73.962264,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Brooklyn Industries",
    },
    "512997d7e4b0b35362953cb1": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d116941735",
          "name": "Bar",
          "pluralName": "Bars",
          "primary": true,
          "shortName": "Bar",
        },
      ],
      "id": "512997d7e4b0b35362953cb1",
      "location": Object {
        "address": "141 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "formattedAddress": Array [
          "141 Broadway",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.71039332645751,
            "lng": -73.9636134675309,
          },
        ],
        "lat": 40.71039332645751,
        "lng": -73.9636134675309,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "OTB",
      "venuePage": Object {
        "id": "51937976",
      },
    },
    "5261525c11d2bf8a5e104a61": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/arts_entertainment/musicvenue_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1e5931735",
          "name": "Music Venue",
          "pluralName": "Music Venues",
          "primary": true,
          "shortName": "Music Venue",
        },
      ],
      "id": "5261525c11d2bf8a5e104a61",
      "location": Object {
        "address": "146 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Bedford Ave",
        "formattedAddress": Array [
          "146 Broadway (at Bedford Ave)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.710071,
            "lng": -73.963449,
          },
        ],
        "lat": 40.710071,
        "lng": -73.963449,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Baby's All Right",
    },
  },
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSearchAsync should get state after action: getVenuesSearchAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_SEARCH_CANCEL"} 1`] = `
Object {
  "getVenuesSearchAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesSearchAsync should get state after action: getVenuesSearchAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_SEARCH_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSearchAsync should get state after action: getVenuesSearchAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_SEARCH_FAILURE"} 1`] = `
Object {
  "getVenuesSearchAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesSearchAsync should get state after action: getVenuesSearchAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_SEARCH_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSearchAsync should get state after action: getVenuesSearchAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_SEARCH_SUCCESS"} 1`] = `
Object {
  "getVenuesSearchAsync": Object {
    "entityIds": Array [
      "3fd66200f964a5209beb1ee3",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesSearchAsync should get state after action: getVenuesSearchAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_SEARCH_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {
    "3fd66200f964a5209beb1ee3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1cc941735",
          "name": "Steakhouse",
          "pluralName": "Steakhouses",
          "primary": true,
          "shortName": "Steakhouse",
        },
      ],
      "hasPerk": false,
      "id": "3fd66200f964a5209beb1ee3",
      "location": Object {
        "address": "178 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Driggs Ave",
        "distance": 10,
        "formattedAddress": Array [
          "178 Broadway (at Driggs Ave)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.70995790682886,
            "lng": -73.96229110893742,
          },
        ],
        "lat": 40.70995790682886,
        "lng": -73.96229110893742,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Peter Luger Steak House",
      "referralId": "v-1565543515",
      "venuePage": Object {
        "id": "77462637",
      },
    },
  },
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSimilarAsync should get state after action: getVenuesSimilarAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_SIMILAR_CANCEL"} 1`] = `
Object {
  "getVenuesSimilarAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesSimilarAsync should get state after action: getVenuesSimilarAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_SIMILAR_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSimilarAsync should get state after action: getVenuesSimilarAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_SIMILAR_FAILURE"} 1`] = `
Object {
  "getVenuesSimilarAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesSimilarAsync should get state after action: getVenuesSimilarAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_SIMILAR_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSimilarAsync should get state after action: getVenuesSimilarAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_SIMILAR_SUCCESS"} 1`] = `
Object {
  "getVenuesSimilarAsync": Object {
    "entityIds": Array [
      "4c5ef77bfff99c74eda954d3",
      "49dad010f964a520b15e1fe3",
      "4a50e39ff964a52038b01fe3",
      "44d9e8dbf964a5208a361fe3",
      "4d6d4eeb8183a1438a6ba29f",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesSimilarAsync should get state after action: getVenuesSimilarAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_SIMILAR_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {
    "44d9e8dbf964a5208a361fe3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "44d9e8dbf964a5208a361fe3",
      "location": Object {
        "address": "560 Broadway",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "at Prince St",
        "formattedAddress": Array [
          "560 Broadway (at Prince St)",
          "New York, NY 10012",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.72413942875559,
            "lng": -73.99762330336448,
          },
        ],
        "lat": 40.72413942875559,
        "lng": -73.99762330336448,
        "postalCode": "10012",
        "state": "NY",
      },
      "name": "Dean & DeLuca",
      "venuePage": Object {
        "id": "39094592",
      },
    },
    "49dad010f964a520b15e1fe3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "49dad010f964a520b15e1fe3",
      "location": Object {
        "address": "200 Grand St",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "at Mott St",
        "formattedAddress": Array [
          "200 Grand St (at Mott St)",
          "New York, NY 10013",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.71914769980916,
            "lng": -73.99657675353625,
          },
        ],
        "lat": 40.71914769980916,
        "lng": -73.99657675353625,
        "postalCode": "10013",
        "state": "NY",
      },
      "name": "Di Palo Fine Foods",
    },
    "4a50e39ff964a52038b01fe3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "delivery": Object {
        "id": "563543",
        "provider": Object {
          "icon": Object {
            "name": "/delivery_provider_seamless_20180129.png",
            "prefix": "https://fastly.4sqi.net/img/general/cap/",
            "sizes": Array [
              40,
              50,
            ],
          },
          "name": "seamless",
        },
        "url": "https://www.seamless.com/menu/pickle-guys-357-grand-st-new-york/563543?affiliate=1131&utm_source=foursquare-affiliate-network&utm_medium=affiliate&utm_campaign=1131&utm_content=563543",
      },
      "id": "4a50e39ff964a52038b01fe3",
      "location": Object {
        "address": "357 Grand St",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "Essex St",
        "formattedAddress": Array [
          "357 Grand St (Essex St)",
          "New York, NY 10002",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.716567980864525,
            "lng": -73.9889929963776,
          },
        ],
        "lat": 40.716567980864525,
        "lng": -73.9889929963776,
        "postalCode": "10002",
        "state": "NY",
      },
      "name": "The Pickle Guys",
      "venuePage": Object {
        "id": "56125711",
      },
    },
    "4c5ef77bfff99c74eda954d3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "4c5ef77bfff99c74eda954d3",
      "location": Object {
        "address": "200 5th Ave",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "at W 23rd St",
        "formattedAddress": Array [
          "200 5th Ave (at W 23rd St)",
          "New York, NY 10010",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.74198696405861,
            "lng": -73.98991319280194,
          },
        ],
        "lat": 40.74198696405861,
        "lng": -73.98991319280194,
        "postalCode": "10010",
        "state": "NY",
      },
      "name": "Eataly",
    },
    "4d6d4eeb8183a1438a6ba29f": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "4d6d4eeb8183a1438a6ba29f",
      "location": Object {
        "address": "166 Allen St",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "at Stanton St.",
        "formattedAddress": Array [
          "166 Allen St (at Stanton St.)",
          "New York, NY 10002",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.720219738870185,
            "lng": -73.98913343866487,
          },
        ],
        "lat": 40.720219738870185,
        "lng": -73.98913343866487,
        "postalCode": "10002",
        "state": "NY",
      },
      "name": "Shi Eurasian Market",
    },
  },
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSuggestCompletionAsync should get state after action: getVenuesSuggestCompletionAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_SUGGEST_COMPLETION_CANCEL"} 1`] = `
Object {
  "getVenuesSuggestCompletionAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesSuggestCompletionAsync should get state after action: getVenuesSuggestCompletionAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_SUGGEST_COMPLETION_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSuggestCompletionAsync should get state after action: getVenuesSuggestCompletionAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_SUGGEST_COMPLETION_FAILURE"} 1`] = `
Object {
  "getVenuesSuggestCompletionAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesSuggestCompletionAsync should get state after action: getVenuesSuggestCompletionAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_SUGGEST_COMPLETION_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesSuggestCompletionAsync should get state after action: getVenuesSuggestCompletionAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_SUGGEST_COMPLETION_SUCCESS"} 1`] = `
Object {
  "getVenuesSuggestCompletionAsync": Object {
    "entityIds": Array [
      "4f045eeb00399761c77301e3",
      "45ebc982f964a52091431fe3",
      "3fd66200f964a52062e61ee3",
      "51351c3fe4b0c58b63965114",
      "3fd66200f964a520c7f11ee3",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesSuggestCompletionAsync should get state after action: getVenuesSuggestCompletionAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_SUGGEST_COMPLETION_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {
    "3fd66200f964a52062e61ee3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ca941735",
          "name": "Pizza Place",
          "pluralName": "Pizza Places",
          "shortName": "Pizza",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
            "suffix": ".png",
          },
          "id": "4d4b7105d754a06374d81259",
          "name": "Food",
          "pluralName": "Food",
          "shortName": "Food",
        },
      ],
      "hasPerk": false,
      "id": "3fd66200f964a52062e61ee3",
      "location": Object {
        "address": "32 Spring St",
        "city": "New York",
        "country": "US",
        "crossStreet": "at Mott St",
        "distance": 480,
        "lat": 40.72156708733683,
        "lng": -73.99559138323225,
        "postalCode": "10012",
        "state": "NY",
      },
      "name": "Lombardi's Coal Oven Pizza",
    },
    "3fd66200f964a520c7f11ee3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ca941735",
          "name": "Pizza Place",
          "pluralName": "Pizza Places",
          "shortName": "Pizza",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/winery_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d123941735",
          "name": "Wine Bar",
          "pluralName": "Wine Bars",
          "shortName": "Wine Bar",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/italian_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d110941735",
          "name": "Italian Restaurant",
          "pluralName": "Italian Restaurants",
          "shortName": "Italian",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
            "suffix": ".png",
          },
          "id": "4d4b7105d754a06374d81259",
          "name": "Food",
          "pluralName": "Food",
          "shortName": "Food",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/default_",
            "suffix": ".png",
          },
          "id": "4d4b7105d754a06376d81259",
          "name": "Nightlife Spot",
          "pluralName": "Nightlife Spots",
          "shortName": "Nightlife",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d116941735",
          "name": "Bar",
          "pluralName": "Bars",
          "shortName": "Bar",
        },
      ],
      "hasPerk": false,
      "id": "3fd66200f964a520c7f11ee3",
      "location": Object {
        "address": "1 5th Ave",
        "city": "New York",
        "country": "US",
        "crossStreet": "at E 8th St",
        "distance": 681,
        "lat": 40.731990997794966,
        "lng": -73.99622300550848,
        "postalCode": "10003",
        "state": "NY",
      },
      "name": "Otto Enoteca Pizzeria",
    },
    "45ebc982f964a52091431fe3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ca941735",
          "name": "Pizza Place",
          "pluralName": "Pizza Places",
          "shortName": "Pizza",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
            "suffix": ".png",
          },
          "id": "4d4b7105d754a06374d81259",
          "name": "Food",
          "pluralName": "Food",
          "shortName": "Food",
        },
      ],
      "hasPerk": false,
      "id": "45ebc982f964a52091431fe3",
      "location": Object {
        "address": "7 Carmine St",
        "city": "New York",
        "country": "US",
        "crossStreet": "at 6th Ave",
        "distance": 728,
        "lat": 40.730491197306435,
        "lng": -74.00188088169593,
        "postalCode": "10014",
        "state": "NY",
      },
      "name": "Joe's Pizza",
    },
    "4f045eeb00399761c77301e3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ca941735",
          "name": "Pizza Place",
          "pluralName": "Pizza Places",
          "shortName": "Pizza",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
            "suffix": ".png",
          },
          "id": "4d4b7105d754a06374d81259",
          "name": "Food",
          "pluralName": "Food",
          "shortName": "Food",
        },
      ],
      "hasPerk": false,
      "id": "4f045eeb00399761c77301e3",
      "location": Object {
        "address": "27 Prince St",
        "city": "New York",
        "country": "US",
        "crossStreet": "btwn Mott & Elizabeth St",
        "distance": 343,
        "lat": 40.722905825704764,
        "lng": -73.99466690110555,
        "postalCode": "10012",
        "state": "NY",
      },
      "name": "Prince Street Pizza",
    },
    "51351c3fe4b0c58b63965114": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1ca941735",
          "name": "Pizza Place",
          "pluralName": "Pizza Places",
          "shortName": "Pizza",
        },
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
            "suffix": ".png",
          },
          "id": "4d4b7105d754a06374d81259",
          "name": "Food",
          "pluralName": "Food",
          "shortName": "Food",
        },
      ],
      "hasPerk": false,
      "id": "51351c3fe4b0c58b63965114",
      "location": Object {
        "address": "150 E 14th St",
        "city": "New York",
        "country": "US",
        "crossStreet": "3rd Ave.",
        "distance": 1097,
        "lat": 40.733386570577345,
        "lng": -73.98731060842591,
        "postalCode": "10003",
        "state": "NY",
      },
      "name": "Joe's Pizza",
    },
  },
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesTrendingAsync should get state after action: getVenuesTrendingAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_TRENDING_CANCEL"} 1`] = `
Object {
  "getVenuesTrendingAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/getVenuesTrendingAsync should get state after action: getVenuesTrendingAsync.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_TRENDING_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesTrendingAsync should get state after action: getVenuesTrendingAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_TRENDING_FAILURE"} 1`] = `
Object {
  "getVenuesTrendingAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/getVenuesTrendingAsync should get state after action: getVenuesTrendingAsync.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_TRENDING_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/getVenuesTrendingAsync should get state after action: getVenuesTrendingAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_TRENDING_SUCCESS"} 1`] = `
Object {
  "getVenuesTrendingAsync": Object {
    "entityIds": Array [
      "3fd66200f964a5209beb1ee3",
    ],
  },
}
`;

exports[`reducers/venues/getVenuesTrendingAsync should get state after action: getVenuesTrendingAsync.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_TRENDING_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {
    "3fd66200f964a5209beb1ee3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1cc941735",
          "name": "Steakhouse",
          "pluralName": "Steakhouses",
          "primary": true,
          "shortName": "Steakhouse",
        },
      ],
      "hasPerk": false,
      "id": "3fd66200f964a5209beb1ee3",
      "location": Object {
        "address": "178 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Driggs Ave",
        "distance": 10,
        "formattedAddress": Array [
          "178 Broadway (at Driggs Ave)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.70995790682886,
            "lng": -73.96229110893742,
          },
        ],
        "lat": 40.70995790682886,
        "lng": -73.96229110893742,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Peter Luger Steak House",
      "referralId": "v-1565543515",
      "venuePage": Object {
        "id": "77462637",
      },
    },
  },
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/payloadGetVenuesExplore should get state after action: payloadGetVenuesExplore.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_EXPLORE_CANCEL"} 1`] = `
Object {
  "getVenuesExploreAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/payloadGetVenuesExplore should get state after action: payloadGetVenuesExplore.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_EXPLORE_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/payloadGetVenuesExplore should get state after action: payloadGetVenuesExplore.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_EXPLORE_FAILURE"} 1`] = `
Object {
  "getVenuesExploreAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/payloadGetVenuesExplore should get state after action: payloadGetVenuesExplore.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_EXPLORE_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/payloadGetVenuesExplore should get state after action: payloadGetVenuesExplore.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_EXPLORE_SUCCESS"} 1`] = `
Object {
  "getVenuesExploreAsync": Object {
    "entityIds": Array [
      "49b6e8d2f964a52016531fe3",
    ],
  },
}
`;

exports[`reducers/venues/payloadGetVenuesExplore should get state after action: payloadGetVenuesExplore.success with action: {"meta": undefined, "payload": [Array], "type": "GET_VENUES_EXPLORE_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {
    "49b6e8d2f964a52016531fe3": Object {
      "reasons": Object {
        "count": 0,
        "items": Array [
          Object {
            "reasonName": "globalInteractionReason",
            "summary": "This spot is popular",
            "type": "general",
          },
        ],
      },
      "venue": Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1f5941735",
            "name": "Gourmet Shop",
            "pluralName": "Gourmet Shops",
            "primary": true,
            "shortName": "Gourmet",
          },
        ],
        "id": "49b6e8d2f964a52016531fe3",
        "location": Object {
          "address": "179 E Houston St",
          "cc": "US",
          "city": "New York",
          "country": "United States",
          "crossStreet": "btwn Allen & Orchard St",
          "distance": 130,
          "formattedAddress": Array [
            "179 E Houston St (btwn Allen & Orchard St)",
            "New York, NY 10002",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.72286707707289,
              "lng": -73.98829148466851,
            },
          ],
          "lat": 40.72286707707289,
          "lng": -73.98829148466851,
          "postalCode": "10002",
          "state": "NY",
        },
        "name": "Russ & Daughters",
        "venuePage": Object {
          "id": "77298563",
        },
      },
    },
  },
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/payloadGetVenuesLikes should get state after action: payloadGetVenuesLikes.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_LIKES_CANCEL"} 1`] = `
Object {
  "getVenuesLikesAsync": Object {
    "cancelReason": "An user cancelled this action",
    "entityIds": Array [],
  },
}
`;

exports[`reducers/venues/payloadGetVenuesLikes should get state after action: payloadGetVenuesLikes.cancel with action: {"meta": undefined, "payload": "An user cancelled this action", "type": "GET_VENUES_LIKES_CANCEL"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/payloadGetVenuesLikes should get state after action: payloadGetVenuesLikes.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_LIKES_FAILURE"} 1`] = `
Object {
  "getVenuesLikesAsync": Object {
    "entityIds": Array [],
    "error": [Error: An error occurred],
  },
}
`;

exports[`reducers/venues/payloadGetVenuesLikes should get state after action: payloadGetVenuesLikes.failure with action: {"meta": undefined, "payload": [Error: An error occurred], "type": "GET_VENUES_LIKES_FAILURE"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;

exports[`reducers/venues/payloadGetVenuesLikes should get state after action: payloadGetVenuesLikes.success with action: {"meta": undefined, "payload": [Object], "type": "GET_VENUES_LIKES_SUCCESS"} 1`] = `
Object {
  "getVenuesLikesAsync": Object {
    "entityIds": Array [
      "66019143",
      "275151",
      "29109434",
    ],
  },
}
`;

exports[`reducers/venues/payloadGetVenuesLikes should get state after action: payloadGetVenuesLikes.success with action: {"meta": undefined, "payload": [Object], "type": "GET_VENUES_LIKES_SUCCESS"} 2`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "likesEntities": Object {
    "275151": Object {
      "firstName": "Tyler",
      "gender": "male",
      "id": "275151",
      "lastName": "Elliott",
      "photo": Object {
        "prefix": "https://fastly.4sqi.net/img/user/",
        "suffix": "/275151-4G0WJJPRVXOCJBAS.jpg",
      },
    },
    "29109434": Object {
      "firstName": "Miraculous",
      "gender": "none",
      "id": "29109434",
      "lastName": "Assembly",
      "photo": Object {
        "prefix": "https://fastly.4sqi.net/img/user/",
        "suffix": "/29109434_EKGvTLjo_d3wFukA0xdHXaFwxCMmxzb3BoI_6W1JQVeXLs3rgbsD3tGOPhAZoY8-wnUghn_LP",
      },
    },
    "66019143": Object {
      "firstName": "Joe",
      "gender": "male",
      "id": "66019143",
      "lastName": "Benz",
      "photo": Object {
        "prefix": "https://fastly.4sqi.net/img/user/",
        "suffix": "/66019143_U7cpUhMp_MBPhsA_er-CfMmMiFXj2KsurXDZxMKR9KSiqf8vDKNtm8CuETX01F_RUzfyzjpa6.jpg",
      },
    },
  },
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Object {},
  "similarVenues": Object {},
  "trendingEntities": Object {},
  "venuesListed": Object {},
}
`;
